2006-04-18  David Reveman  <davidr@novell.com>

	* fb/fbmmx.c (fbCompositeSrc_yv12x8888mmx): Translate U, V start
	pointers correctly and set srcEnd correctly.

2006-04-13  David Reveman  <davidr@novell.com>

	* hw/xgl/xglparse.c (xglProcessArgument, xglUseMsg):
	* hw/xgl/xglxv.c:
	* hw/xgl/egl/xeglinit.c:
	* hw/xgl/glx/xglxinit.c:
	* hw/xgl/xglinit.c:
	* hw/xgl/xglscreen.c (xglScreenInit):
	* hw/xgl/xgl.h: Add xvfilter and noyuv options. xvfilter can be used
	to set the filter used for XVideo, currently available filters are
	nearest and linear (default is linear). Nearest filter can improve
	performance signifcantly when XVideo isn't accelerated. noyuv
	option can be used to force use of software YUV to RGB conversions,
	which can improve performance when GL_ARB_fragment_program support
	isn't fast enough.

	* fb/fbpict.c (fbComposite):
	* fb/fbmmx.h:
	* fb/fbmmx.c: Add fast YUV conversion code.

2006-04-10  David Reveman  <davidr@novell.com>

	* fb/fb.h (fbGetDrawable): Don't lose sign on stride.

	* fb/fbcompose.c (fbFetchTransformed): Shift down after multiplication
	with filter parameters that are be in 16.16 fixed point.

2006-04-09  David Reveman  <davidr@novell.com>

	* GL/glx/glxcmds.c (DoMakeCurrent): Reset pending state when making a
	context current.

	* GL/glx/glxext.c (__glXForceCurrent): Check for pending destroy flag
	instead of drawPriv being NULL as that should never happen.

	* GL/glx/glxvisuals.c (init_visuals): Set EXT_tfp attributes properly.

	* GL/glx/glxserver.h: More temporary EXT_tfp defines.

	* GL/glx/glxcmds.c (__glXCreateARGBConfig): Set EXT_tfp attributes.
	(DoGetFBConfigs): Add GLX_DRAWABLE_TYPE and EXT_tfp attributes.
	(DoGetDrawableAttributes): Remove Y_INVERTED.

2006-04-08  David Reveman  <davidr@novell.com>

	* hw/xgl/xglsync.c (xglSyncSurface): Add very useful optimization
	for which avoids which makes pixels transfers much more efficient in
	some cases.

	* hw/xgl/Makefile.am (Xgl_DEPENDENCIES): Add libxgl.a.
