@@ -1,3 +1,11 @@
+2006-04-19  David Reveman  <davidr@novell.com>
+
+	* hw/xgl/glx/xglx.c: Pass display offset to xglxInitXorg.
+
+	* hw/xgl/glx/xglx.h:
+	* hw/xgl/glx/xglxorg.c: Use offset for xorg display so that more than
+	one server can be started.
+
 2006-04-18  David Reveman  <davidr@novell.com>
 
 	* fb/fbmmx.c (fbCompositeSrc_yv12x8888mmx): Translate U, V start
